--- a/index.html
+++ b/index.html
@@ -25,8 +25,18 @@
   <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
 
   <!-- Template Main CSS File -->
+  <link href="assets/css/index.css" rel="stylesheet">
+  <link href="assets/css/card.css" rel="stylesheet">
   <link href="assets/css/style.css" rel="stylesheet">
 
+    <script
+      src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+      integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+      crossorigin="anonymous"
+    ></script> <script
+      src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"
+      type="text/javascript"
+    ></script>
   <!-- =======================================================
   * Template Name: Valera
   * Updated: Sep 18 2023 with Bootstrap v5.3.2
@@ -39,12 +49,23 @@
 <body>
 
   <!-- ======= Hero Section ======= -->
-  <section id="hero">
-    <div class="hero-container">
-      <h1>Welcome to Valera</h1>
-      <h2>We are team of talented designers making websites with Bootstrap</h2>
-      <a href="#about" class="btn-get-started scrollto">Get Started</a>
-    </div>
+  <section id="hero" >
+      <div id="table" class="table effect">
+        <div class='cardb discovered'>
+          <div class='card_content'>
+            element 
+          </div>
+      </div>
+        <div class='cardb'>
+          <div class='card_content'>
+            element 
+          </div>
+      </div>
+        <div class='cardb'>
+          <div class='card_content'>
+            element 
+          </div>
+      </div>
   </section><!-- End Hero -->
 
   <!-- ======= Header ======= -->
@@ -878,6 +899,7 @@
   <script src="assets/vendor/php-email-form/validate.js"></script>
 
   <!-- Template Main JS File -->
+  <script src="assets/js/effect.js"></script>
   <script src="assets/js/main.js"></script>
 
 </body>
