--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
   <link href="assets/css/index.css" rel="stylesheet">
   <link href="assets/css/card.css" rel="stylesheet">
   <link href="assets/css/style.css" rel="stylesheet">
+  <link href="assets/css/custom.css" rel="stylesheet">
 
     <script
       src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
@@ -51,7 +52,7 @@
   <!-- ======= Hero Section ======= -->
   <section id="hero" >
       <div id="table" class="table effect">
-        <div class='cardb discovered'>
+        <div class='cardb  discovered'>
           <div class='card_content'>
             element 
           </div>
@@ -643,6 +644,7 @@
   <script src="assets/vendor/php-email-form/validate.js"></script>
 
   <!-- Template Main JS File -->
+  <script src="assets/js/index.js"></script>
   <script src="assets/js/effect.js"></script>
   <script src="assets/js/main.js"></script>
 
