--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
   <link href="assets/css/card.css" rel="stylesheet">
   <link href="assets/css/style.css" rel="stylesheet">
   <link href="assets/css/custom.css" rel="stylesheet">
+  <link href="assets/css/team.css" rel="stylesheet">
 
     <script
       src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
@@ -45,6 +46,7 @@
   * Author: BootstrapMade.com
   * License: https://bootstrapmade.com/license/
   ======================================================== -->
+
 </head>
 
 <body>
@@ -440,86 +442,146 @@
     <!-- ======= Team Section ======= -->
     <section id="team" class="team section-bg">
       <div class="container">
-
+   
         <div class="section-title">
           <h2>Team</h2>
           <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
         </div>
 
-        <div class="row">
-
-          <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
-            <div class="member">
-              <div class="member-img">
-                <img src="assets/img/team/team-1.jpg" class="img-fluid" alt="">
-                <div class="social">
-                  <a href=""><i class="bi bi-twitter"></i></a>
-                  <a href=""><i class="bi bi-facebook"></i></a>
-                  <a href=""><i class="bi bi-instagram"></i></a>
-                  <a href=""><i class="bi bi-linkedin"></i></a>
-                </div>
+        <div class="row g-3">
+          <div class="col-lg-4 col-md-6 col-sm-12 d-flex justify-content-center">
+          <div class="flip-card g-md-3">
+            <div class="flip-card-inner">
+              <div class="flip-card-front">
+                <img src="assets/img/team/Emma.jpg" alt="Member.jpg">
               </div>
-              <div class="member-info">
-                <h4>Walter White</h4>
-                <span>Chief Executive Officer</span>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
-            <div class="member">
-              <div class="member-img">
-                <img src="assets/img/team/team-2.jpg" class="img-fluid" alt="">
-                <div class="social">
-                  <a href=""><i class="bi bi-twitter"></i></a>
-                  <a href=""><i class="bi bi-facebook"></i></a>
-                  <a href=""><i class="bi bi-instagram"></i></a>
-                  <a href=""><i class="bi bi-linkedin"></i></a>
-                </div>
-              </div>
-              <div class="member-info">
-                <h4>Sarah Jhonson</h4>
-                <span>Product Manager</span>
+              <div class="flip-card-back">
+                <p>Penman</p>
+                <hr/>
+                <a class="btn btn-primary" style="background-color: #3b5998;" href="#">
+                <i class="bi bi-facebook"></i>
+                </a>
+                <a class="btn btn-primary" style="background-color: #55acee;" href="#">
+                  <i class="bi bi-twitter"></i>
+                </a>
+                <a class="btn btn-primary" style="background-color: #ac2bac;" href="#">
+                  <i class="bi bi-instagram"></i>
+                </a>
               </div>
             </div>
           </div>
-
-          <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
-            <div class="member">
-              <div class="member-img">
-                <img src="assets/img/team/team-3.jpg" class="img-fluid" alt="">
-                <div class="social">
-                  <a href=""><i class="bi bi-twitter"></i></a>
-                  <a href=""><i class="bi bi-facebook"></i></a>
-                  <a href=""><i class="bi bi-instagram"></i></a>
-                  <a href=""><i class="bi bi-linkedin"></i></a>
+          </div>
+          <div class="col-lg-4 col-md-6 col-sm-12 d-flex justify-content-center">
+            <div class="flip-card">
+              <div class="flip-card-inner">
+                <div class="flip-card-front">
+                  <img src="assets/img/team/Jim.jpg" alt="Member.jpg"">
+                </div>
+                <div class="flip-card-back">
+                  <p>Penman</p>
+                  <hr>
+                  <a class="btn btn-primary" style="background-color: #3b5998;" href="#">
+                    <i class="bi bi-facebook"></i>
+                    </a>
+                    <a class="btn btn-primary" style="background-color: #55acee;" href="#">
+                      <i class="bi bi-twitter"></i>
+                    </a>
+                    <a class="btn btn-primary" style="background-color: #ac2bac;" href="#">
+                      <i class="bi bi-instagram"></i>
+                    </a>
                 </div>
               </div>
-              <div class="member-info">
-                <h4>William Anderson</h4>
-                <span>CTO</span>
-              </div>
             </div>
-          </div>
-
-          <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
-            <div class="member">
-              <div class="member-img">
-                <img src="assets/img/team/team-4.jpg" class="img-fluid" alt="">
-                <div class="social">
-                  <a href=""><i class="bi bi-twitter"></i></a>
-                  <a href=""><i class="bi bi-facebook"></i></a>
-                  <a href=""><i class="bi bi-instagram"></i></a>
-                  <a href=""><i class="bi bi-linkedin"></i></a>
+            </div>
+            <div class="col-lg-4 col-md-6 col-sm-12 d-flex justify-content-center">
+              <div class="flip-card">
+                <div class="flip-card-inner">
+                  <div class="flip-card-front">
+                    <img src="assets/img/team/Jowy.jpg" alt="Member.jpg">
+                  </div>
+                  <div class="flip-card-back">
+                    <p>Designer</p>
+                    <hr>
+                    <a class="btn btn-primary" style="background-color: #3b5998;" href="#">
+                      <i class="bi bi-facebook"></i>
+                      </a>
+                      <a class="btn btn-primary" style="background-color: #55acee;" href="#">
+                        <i class="bi bi-twitter"></i>
+                      </a>
+                      <a class="btn btn-primary" style="background-color: #ac2bac;" href="#">
+                        <i class="bi bi-instagram"></i>
+                      </a>
+                  </div>
                 </div>
               </div>
-              <div class="member-info">
-                <h4>Amanda Jepson</h4>
-                <span>Accountant</span>
               </div>
-            </div>
-          </div>
-
+              <div class="col-lg-4 col-md-6 col-sm-12 d-flex justify-content-center">
+                <div class="flip-card">
+                  <div class="flip-card-inner">
+                    <div class="flip-card-front">
+                      <img src="assets/img/team/Alaiza.jpg" alt="Member.jpg">
+                    </div>
+                    <div class="flip-card-back">
+                      <p>Designer</p>
+                      <hr>
+                      <a class="btn btn-primary" style="background-color: #3b5998;" href="#">
+                        <i class="bi bi-facebook"></i>
+                        </a>
+                        <a class="btn btn-primary" style="background-color: #55acee;" href="#">
+                          <i class="bi bi-twitter"></i>
+                        </a>
+                        <a class="btn btn-primary" style="background-color: #ac2bac;" href="#">
+                          <i class="bi bi-instagram"></i>
+                        </a>
+                    </div>
+                  </div>
+                </div>
+                </div>
+                <div class="col-lg-4 col-md-6 col-sm-12 d-flex justify-content-center">
+                  <div class="flip-card">
+                    <div class="flip-card-inner">
+                      <div class="flip-card-front">
+                        <img src="assets/img/team/Dan.jpg" alt="Member.jpg">
+                      </div>
+                      <div class="flip-card-back">
+                        <p>Dev</p>
+                        <hr>
+                        <a class="btn btn-primary" style="background-color: #3b5998;" href="#">
+                          <i class="bi bi-facebook"></i>
+                          </a>
+                          <a class="btn btn-primary" style="background-color: #55acee;" href="#">
+                            <i class="bi bi-twitter"></i>
+                          </a>
+                          <a class="btn btn-primary" style="background-color: #ac2bac;" href="#">
+                            <i class="bi bi-instagram"></i>
+                          </a>
+                      </div>
+                    </div>
+                  </div>
+                  </div>
+                  <div class="col-lg-4 col-md-6 col-sm-12 d-flex justify-content-center">
+                    <div class="flip-card">
+                      <div class="flip-card-inner">
+                        <div class="flip-card-front">
+                          <img src="assets/img/team/Channey.jpg" alt="Member.jpg">
+                        </div>
+                        <div class="flip-card-back">
+                          <p>Dev</p>
+                          <hr>
+                          <a class="btn btn-primary" style="background-color: #3b5998;" href="#">
+                            <i class="bi bi-facebook"></i>
+                            </a>
+                            <a class="btn btn-primary" style="background-color: #55acee;" href="#">
+                              <i class="bi bi-twitter"></i>
+                            </a>
+                            <a class="btn btn-primary" style="background-color: #ac2bac;" href="#">
+                              <i class="bi bi-instagram"></i>
+                            </a>
+                        </div>
+                      </div>
+                    </div>
+                    </div>
+                    
         </div>
 
       </div>
@@ -647,6 +709,7 @@
   <script src="assets/js/index.js"></script>
   <script src="assets/js/effect.js"></script>
   <script src="assets/js/main.js"></script>
+  <script src="assets/js/team.js"></script>
 
 </body>
 
