--- a/index.html
+++ b/index.html
@@ -393,18 +393,18 @@
           <div class="flip-card g-md-3">
             <div class="flip-card-inner">
               <div class="flip-card-front">
-                <img src="assets/img/team/Emma.jpg" alt="Member.jpg">
+                <img src="assets/img/team/Emma.png" alt="Emmaly-Basa-Portrait.png">
               </div>
               <div class="flip-card-back">
                 <p>Penman</p>
                 <hr/>
-                <a class="btn btn-primary" style="background-color: #3b5998;" href="#">
+                <a class="btn btn-primary" style="background-color: #3b5998;" href="https://www.facebook.com/emshiie">
                 <i class="bi bi-facebook"></i>
                 </a>
-                <a class="btn btn-primary" style="background-color: #55acee;" href="#">
+                <a class="btn btn-primary" style="background-color: #55acee;" href="https://x.com/eabbbb_?t=kV7MhA-tkrFDam26L-idPA&s=09">
                   <i class="bi bi-twitter"></i>
                 </a>
-                <a class="btn btn-primary" style="background-color: #ac2bac;" href="#">
+                <a class="btn btn-primary" style="background-color: #ac2bac;" href="https://instagram.com/emsshhiiee?igshid=OGQ5ZDc2ODk2ZA==">
                   <i class="bi bi-instagram"></i>
                 </a>
               </div>
@@ -415,18 +415,18 @@
             <div class="flip-card">
               <div class="flip-card-inner">
                 <div class="flip-card-front">
-                  <img src="assets/img/team/Jim.jpg" alt="Member.jpg"">
+                  <img src="assets/img/team/Jim.png" alt="Jim-Espiritu-Portrait.png">
                 </div>
                 <div class="flip-card-back">
                   <p>Penman</p>
                   <hr>
-                  <a class="btn btn-primary" style="background-color: #3b5998;" href="#">
+                  <a class="btn btn-primary" style="background-color: #3b5998;" href="https://www.facebook.com/jimangelo11">
                     <i class="bi bi-facebook"></i>
                     </a>
-                    <a class="btn btn-primary" style="background-color: #55acee;" href="#">
+                    <a class="btn btn-primary" style="background-color: #55acee;" href="https://twitter.com/wtffffjim">
                       <i class="bi bi-twitter"></i>
                     </a>
-                    <a class="btn btn-primary" style="background-color: #ac2bac;" href="#">
+                    <a class="btn btn-primary" style="background-color: #ac2bac;" href="https://www.instagram.com/mijjxae/">
                       <i class="bi bi-instagram"></i>
                     </a>
                 </div>
@@ -437,18 +437,18 @@
               <div class="flip-card">
                 <div class="flip-card-inner">
                   <div class="flip-card-front">
-                    <img src="assets/img/team/Jowy.jpg" alt="Member.jpg">
+                    <img src="assets/img/team/Jowy.png" alt="Jowalyn-Diwa-Portrait.png">
                   </div>
                   <div class="flip-card-back">
                     <p>Designer</p>
                     <hr>
-                    <a class="btn btn-primary" style="background-color: #3b5998;" href="#">
+                    <a class="btn btn-primary" style="background-color: #3b5998;" href="https://www.facebook.com/jooowwyy?mibextid=ZbWKwL">
                       <i class="bi bi-facebook"></i>
                       </a>
-                      <a class="btn btn-primary" style="background-color: #55acee;" href="#">
+                      <a class="btn btn-primary" style="background-color: #55acee;" href="https://twitter.com/Drrreedd">
                         <i class="bi bi-twitter"></i>
                       </a>
-                      <a class="btn btn-primary" style="background-color: #ac2bac;" href="#">
+                      <a class="btn btn-primary" style="background-color: #ac2bac;" href="https://www.instagram.com/jooowwy/">
                         <i class="bi bi-instagram"></i>
                       </a>
                   </div>
@@ -459,7 +459,7 @@
                 <div class="flip-card">
                   <div class="flip-card-inner">
                     <div class="flip-card-front">
-                      <img src="assets/img/team/Alaiza.jpg" alt="Member.jpg">
+                      <img src="assets/img/team/Alaiza.png" alt="Alaiza-Coloma-Portrait.png">
                     </div>
                     <div class="flip-card-back">
                       <p>Designer</p>
@@ -481,18 +481,18 @@
                   <div class="flip-card">
                     <div class="flip-card-inner">
                       <div class="flip-card-front">
-                        <img src="assets/img/team/Dan.jpg" alt="Member.jpg">
+                        <img src="assets/img/team/Dan.png" alt="Dan-Arjay-Cabucana-Portrait.png">
                       </div>
                       <div class="flip-card-back">
                         <p>Dev</p>
                         <hr>
-                        <a class="btn btn-primary" style="background-color: #3b5998;" href="#">
+                        <a class="btn btn-primary" style="background-color: #3b5998;" href="https://www.facebook.com/Dan.Cabucana.31">
                           <i class="bi bi-facebook"></i>
                           </a>
-                          <a class="btn btn-primary" style="background-color: #55acee;" href="#">
+                          <a class="btn btn-primary" style="background-color: #55acee;" href="https://twitter.com/ArjayCabucana">
                             <i class="bi bi-twitter"></i>
                           </a>
-                          <a class="btn btn-primary" style="background-color: #ac2bac;" href="#">
+                          <a class="btn btn-primary" style="background-color: #ac2bac;" href="https://www.instagram.com/danarjaycabucana/">
                             <i class="bi bi-instagram"></i>
                           </a>
                       </div>
@@ -503,18 +503,18 @@
                     <div class="flip-card">
                       <div class="flip-card-inner">
                         <div class="flip-card-front">
-                          <img src="assets/img/team/Channey.jpg" alt="Member.jpg">
+                          <img src="assets/img/team/Channey.png" alt="Channey-Ydreo-Marzan-Portrait.png">
                         </div>
                         <div class="flip-card-back">
                           <p>Dev</p>
                           <hr>
-                          <a class="btn btn-primary" style="background-color: #3b5998;" href="#">
+                          <a class="btn btn-primary" style="background-color: #3b5998;" href="https://www.facebook.com/channeyydreo.marzan/">
                             <i class="bi bi-facebook"></i>
                             </a>
-                            <a class="btn btn-primary" style="background-color: #55acee;" href="#">
+                            <a class="btn btn-primary" style="background-color: #55acee;" href="https://twitter.com/y_dreo">
                               <i class="bi bi-twitter"></i>
                             </a>
-                            <a class="btn btn-primary" style="background-color: #ac2bac;" href="#">
+                            <a class="btn btn-primary" style="background-color: #ac2bac;" href="https://www.instagram.com/ydriex/">
                               <i class="bi bi-instagram"></i>
                             </a>
                         </div>
