--- a/index.html
+++ b/index.html
@@ -143,8 +143,8 @@
       </div>
       </div>
       <div class="hero-container">
-        <h1>Welcome to Valera</h1>
-        <h2>We are team of talented designers making websites with Bootstrap</h2>
+        <h1>Welcome to TECHCARD</h1>
+        <h2>Welcome to the future of technology at your fingertips with TechCard</h2>
         <a href="#about" class="btn-get-started scrollto">Get Started</a>
     </div>
   </section><!-- End Hero -->
