--- a/index.html
+++ b/index.html
@@ -463,13 +463,13 @@
                     <div class="flip-card-back">
                       <p>Designer</p>
                       <hr>
-                      <a class="btn btn-primary" style="background-color: #3b5998;" href="#">
+                      <a class="btn btn-primary" style="background-color: #3b5998;" href="https://www.facebook.com/profile.php?id=100073055198188&mibextid=LQQJ4d">
                         <i class="bi bi-facebook"></i>
                         </a>
                         <a class="btn btn-primary" style="background-color: #55acee;" href="#">
                           <i class="bi bi-twitter"></i>
                         </a>
-                        <a class="btn btn-primary" style="background-color: #ac2bac;" href="#">
+                        <a class="btn btn-primary" style="background-color: #ac2bac;" href="https://instagram.com/ellieibona?igshid=YzAwZjE1ZTI0Zg%3D%3D&utm_source=qr">
                           <i class="bi bi-instagram"></i>
                         </a>
                     </div>
