--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
       <div class="container">
         <div class="row">
           <div class="col-md-6 d-flex align-items-stretch">
-            <div class="card animated-card animate__animated" style='background-image: url("assets/img/our-values-1.jpg");' onmouseover="animateCard(this)">
+            <div class="card animated-card animate__animated" style='background-image: url("./assets/img/gif/gif.gif");' onmouseover="animateCard(this)">
               <div class="card-body">
                 <h3 class="card-title"><a href="#" class="animated-link" onclick="animateText(this)">Our Mission</a></h3>
                 <p class="card-text" onmouseover="animateText(this)">
@@ -222,7 +222,7 @@
             </div>
           </div>
           <div class="col-md-6 d-flex align-items-stretch mt-4 mt-md-0">
-            <div class="card animated-card animate__animated" style='background-image: url("assets/img/our-values-3.jpg");' onmouseover="animateCard(this)">
+            <div class="card animated-card animate__animated" style='background-image: url("./assets/img/gif/gif2.gif");' onmouseover="animateCard(this)">
               <div class="card-body">
                 <h3 class="card-title"><a href="#" class="animated-link" onclick="animateText(this)">Our Plan</a></h3>
                 <p class="card-text" onmouseover="animateText(this)">
@@ -241,7 +241,6 @@
 
         <div class="section-title">
           <h2>Services</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
         </div>
 
         <div class="row">
@@ -300,8 +299,7 @@
 
         <div class="section-title">
           <h2>Testimonials</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
-        </div>
+           </div>
 
         <div class="testimonials-slider swiper" data-aos="fade-up" data-aos-delay="100">
           <div class="swiper-wrapper">
@@ -384,8 +382,7 @@
    
         <div class="section-title">
           <h2>Team</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
-        </div>
+          </div>
 
         <div class="row g-3">
           <div class="col-lg-4 col-md-6 col-sm-12 d-flex justify-content-center">
@@ -531,6 +528,14 @@
 
         <div class="section-title">
           <h2>Contact</h2>
+          <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15382.687397335578!2d120.9392203!3d15.4482526!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x339727d57ef0edc9%3A0x94e292410c0bdb28!2sNueva%20Ecija%20University%20of%20Science%20and%20Technology%2C%20Sumacab%20Campus!5e0!3m2!1sen!2sph!4v1702480814638!5m2!1sen!2sph" 
+          width="100%" 
+          height="400px"
+          style="border:0;" 
+          allowfullscreen="" 
+          loading="lazy" 
+          referrerpolicy="no-referrer-when-downgrade">
+        </iframe>
         </div>
         <div class="row mt-5">
 
