--- a/index.html
+++ b/index.html
@@ -406,6 +406,12 @@
                 <a class="btn btn-primary" style="background-color: #ac2bac;" href="https://instagram.com/emsshhiiee?igshid=OGQ5ZDc2ODk2ZA==">
                   <i class="bi bi-instagram"></i>
                 </a>
+                <a class="btn btn-primary" style="background-color: #333;" href="#">
+                  <i class="bi bi-github"></i>
+                </a>
+                <br>
+                <p>Do you wanna build Snowman?</p>
+                <button type="button" class="btn btn-primary" href="https://emshiie.github.io/Portfolio/?fbclid=IwAR1TgdLjYmUchnNp2N6AbLlo_ekG3HQk10GAcFLSGZ18cbimwEsmnFcpiiY">Yes!</button>
               </div>
             </div>
           </div>
@@ -428,6 +434,12 @@
                     <a class="btn btn-primary" style="background-color: #ac2bac;" href="https://www.instagram.com/mijjxae/">
                       <i class="bi bi-instagram"></i>
                     </a>
+                    <a class="btn btn-primary" style="background-color: #333;" href="https://github.com/mijxae02">
+                      <i class="bi bi-github"></i>
+                    </a>
+                    <br>
+                    <p>Do you wanna build Snowman?</p>
+                    <button type="button" class="btn btn-primary" href="https://mijxae02.github.io/Portfolio/index.html">Yes!</button>
                 </div>
               </div>
             </div>
@@ -450,6 +462,12 @@
                       <a class="btn btn-primary" style="background-color: #ac2bac;" href="https://www.instagram.com/jooowwy/">
                         <i class="bi bi-instagram"></i>
                       </a>
+                      <a class="btn btn-primary" style="background-color: #333;" href="#">
+                        <i class="bi bi-github"></i>
+                      </a>
+                      <br>
+                      <p>Do you wanna build Snowman?</p>
+                      <button type="button" class="btn btn-primary" href="https://ekenemes.github.io/PORTFOLIO1/">Yes!</button>
                   </div>
                 </div>
               </div>
@@ -472,6 +490,12 @@
                         <a class="btn btn-primary" style="background-color: #ac2bac;" href="https://instagram.com/ellieibona?igshid=YzAwZjE1ZTI0Zg%3D%3D&utm_source=qr">
                           <i class="bi bi-instagram"></i>
                         </a>
+                        <a class="btn btn-primary" style="background-color: #333;" href="#">
+                          <i class="bi bi-github"></i>
+                        </a>
+                        <br>
+                        <p>Do you wanna build Snowman?</p>
+                        <button type="button" class="btn btn-primary" href="#">Yes!</button>
                     </div>
                   </div>
                 </div>
@@ -494,6 +518,12 @@
                           <a class="btn btn-primary" style="background-color: #ac2bac;" href="https://www.instagram.com/danarjaycabucana/">
                             <i class="bi bi-instagram"></i>
                           </a>
+                          <a class="btn btn-primary" style="background-color: #333;" href="https://github.com/DanArjayBagabayCabucana">
+                            <i class="bi bi-github"></i>
+                          </a>
+                          <br>
+                          <p>Do you wanna build Snowman?</p>
+                          <button type="button" class="btn btn-primary" href="https://danarjaybagabaycabucana.github.io/Portfolio/">Yes!</button>
                       </div>
                     </div>
                   </div>
@@ -516,6 +546,12 @@
                             <a class="btn btn-primary" style="background-color: #ac2bac;" href="https://www.instagram.com/ydriex/">
                               <i class="bi bi-instagram"></i>
                             </a>
+                            <a class="btn btn-primary" style="background-color: #333;" href="#">
+                              <i class="bi bi-github"></i>
+                            </a>
+                            <br>
+                            <p>Do you wanna build Snowman?</p>
+                            <button type="button" class="btn btn-primary" href="#">Yes!</button>
                         </div>
                       </div>
                 </div>
