--- a/index.html
+++ b/index.html
@@ -408,7 +408,7 @@
                 </a>
                 <br>
                 <p>Do you wanna build Snowman?</p>
-                <button type="button" class="btn btn-primary" href="https://emshiie.github.io/Portfolio/?fbclid=IwAR1TgdLjYmUchnNp2N6AbLlo_ekG3HQk10GAcFLSGZ18cbimwEsmnFcpiiY">Yes!</button>
+                <a class="btn btn-primary" href="https://emshiie.github.io/Portfolio/?fbclid=IwAR1TgdLjYmUchnNp2N6AbLlo_ekG3HQk10GAcFLSGZ18cbimwEsmnFcpiiY">Yes!</a>
               </div>
             </div>
           </div>
@@ -436,7 +436,7 @@
                     </a>
                     <br>
                     <p>Do you wanna build Snowman?</p>
-                    <button type="button" class="btn btn-primary" href="https://mijxae02.github.io/Portfolio/index.html">Yes!</button>
+                    <a class="btn btn-primary" href="https://mijxae02.github.io/Portfolio/index.html">Yes!</a>
                 </div>
               </div>
             </div>
@@ -464,7 +464,7 @@
                       </a>
                       <br>
                       <p>Do you wanna build Snowman?</p>
-                      <button type="button" class="btn btn-primary" href="https://ekenemes.github.io/PORTFOLIO1/">Yes!</button>
+                      <a class="btn btn-primary" href="https://ekenemes.github.io/PORTFOLIO1/">Yes!</a>
                   </div>
                 </div>
               </div>
@@ -492,7 +492,7 @@
                         </a>
                         <br>
                         <p>Do you wanna build Snowman?</p>
-                        <button type="button" class="btn btn-primary" href="#">Yes!</button>
+                        <a class="btn btn-primary" href="#">Yes!</a>
                     </div>
                   </div>
                 </div>
@@ -520,7 +520,7 @@
                           </a>
                           <br>
                           <p>Do you wanna build Snowman?</p>
-                          <button type="button" class="btn btn-primary" href="https://danarjaybagabaycabucana.github.io/Portfolio/">Yes!</button>
+                          <a class="btn btn-primary" href="https://danarjaybagabaycabucana.github.io/Portfolio/">Yes!</a>
                       </div>
                     </div>
                   </div>
@@ -548,7 +548,7 @@
                             </a>
                             <br>
                             <p>Do you wanna build Snowman?</p>
-                            <button type="button" class="btn btn-primary" href="#">Yes!</button>
+                            <a class="btn btn-primary" href="#">Yes!</a>
                         </div>
                       </div>
                 </div>
