--- a/index.html
+++ b/index.html
@@ -400,6 +400,10 @@
               <div class="flip-card-back">
                 <p>Penman</p>
                 <hr/>
+                <p style="font-size: x-large;padding-bottom: 130px;">Hi! My name is Emalyn Basa,<br/></p>
+                <hr/>
+                <p style="font-size: 20px;">Social Media Accounts:</p>
+                <a class="btn btn-primary" href="https://emshiie.github.io/Portfolio/?fbclid=IwAR1TgdLjYmUchnNp2N6AbLlo_ekG3HQk10GAcFLSGZ18cbimwEsmnFcpiiY">View Portfolio</a>
                 <a class="btn btn-primary" style="background-color: #3b5998;" href="https://www.facebook.com/emshiie">
                 <i class="bi bi-facebook"></i>
                 </a>
@@ -412,9 +416,6 @@
                 <a class="btn btn-primary" style="background-color: #333;" href="#">
                   <i class="bi bi-github"></i>
                 </a>
-                <br>
-                <p>Do you wanna build Snowman?</p>
-                <a class="btn btn-primary" href="https://emshiie.github.io/Portfolio/?fbclid=IwAR1TgdLjYmUchnNp2N6AbLlo_ekG3HQk10GAcFLSGZ18cbimwEsmnFcpiiY">Yes!</a>
               </div>
             </div>
           </div>
@@ -427,7 +428,11 @@
                 </div>
                 <div class="flip-card-back">
                   <p>Penman</p>
-                  <hr>
+                  <hr/>
+                  <p style="font-size: x-large;padding-bottom: 130px;">Hi! My name is Jim Espiritu,<br/></p>
+                  <hr/>
+                  <p style="font-size: 20px;">Social Media Accounts:</p>
+                  <a class="btn btn-primary" href="https://mijxae02.github.io/Portfolio/index.html">View Portfolio</a>
                   <a class="btn btn-primary" style="background-color: #3b5998;" href="https://www.facebook.com/jimangelo11">
                     <i class="bi bi-facebook"></i>
                     </a>
@@ -440,9 +445,6 @@
                     <a class="btn btn-primary" style="background-color: #333;" href="https://github.com/mijxae02">
                       <i class="bi bi-github"></i>
                     </a>
-                    <br>
-                    <p>Do you wanna build Snowman?</p>
-                    <a class="btn btn-primary" href="https://mijxae02.github.io/Portfolio/index.html">Yes!</a>
                 </div>
               </div>
             </div>
@@ -455,7 +457,11 @@
                   </div>
                   <div class="flip-card-back">
                     <p>Designer</p>
-                    <hr>
+                    <hr/>
+                    <p style="font-size: x-large;padding-bottom: 130px;">Hi! My name is Jowalyn Diwa,<br/></p>
+                    <hr/>
+                    <p style="font-size: 20px;">Social Media Accounts:</p>
+                    <a class="btn btn-primary" href="https://ekenemes.github.io/PORTFOLIO1/">View Portfolio</a>
                     <a class="btn btn-primary" style="background-color: #3b5998;" href="https://www.facebook.com/jooowwyy?mibextid=ZbWKwL">
                       <i class="bi bi-facebook"></i>
                       </a>
@@ -468,9 +474,6 @@
                       <a class="btn btn-primary" style="background-color: #333;" href="#">
                         <i class="bi bi-github"></i>
                       </a>
-                      <br>
-                      <p>Do you wanna build Snowman?</p>
-                      <a class="btn btn-primary" href="https://ekenemes.github.io/PORTFOLIO1/">Yes!</a>
                   </div>
                 </div>
               </div>
@@ -483,7 +486,11 @@
                     </div>
                     <div class="flip-card-back">
                       <p>Designer</p>
-                      <hr>
+                      <hr/>
+                      <p style="font-size: x-large;padding-bottom: 130px;">Hi! My name is Alaiza Coloma,<br/></p>
+                      <hr/>
+                      <p style="font-size: 20px;">Social Media Accounts:</p>
+                      <a class="btn btn-primary" href="#">View Portfolio</a>
                       <a class="btn btn-primary" style="background-color: #3b5998;" href="https://www.facebook.com/profile.php?id=100073055198188&mibextid=LQQJ4d">
                         <i class="bi bi-facebook"></i>
                         </a>
@@ -496,9 +503,6 @@
                         <a class="btn btn-primary" style="background-color: #333;" href="#">
                           <i class="bi bi-github"></i>
                         </a>
-                        <br>
-                        <p>Do you wanna build Snowman?</p>
-                        <a class="btn btn-primary" href="#">Yes!</a>
                     </div>
                   </div>
                 </div>
@@ -510,8 +514,12 @@
                         <img src="assets/img/team/Dan.png" alt="Dan-Arjay-Cabucana-Portrait.png">
                       </div>
                       <div class="flip-card-back">
-                        <p>Dev</p>
-                        <hr>
+                        <p>Developer</p>
+                        <hr/>
+                        <p style="font-size: x-large;padding-bottom: 90px;">Hi! My name is Dan Arjay Cabucana,<br/></p>
+                        <hr/>
+                        <p style="font-size: 20px;">Social Media Accounts:</p>
+                        <a class="btn btn-primary" href="https://danarjaybagabaycabucana.github.io/Portfolio/">View Portfolio</a>
                         <a class="btn btn-primary" style="background-color: #3b5998;" href="https://www.facebook.com/Dan.Cabucana.31">
                           <i class="bi bi-facebook"></i>
                           </a>
@@ -524,9 +532,6 @@
                           <a class="btn btn-primary" style="background-color: #333;" href="https://github.com/DanArjayBagabayCabucana">
                             <i class="bi bi-github"></i>
                           </a>
-                          <br>
-                          <p>Do you wanna build Snowman?</p>
-                          <a class="btn btn-primary" href="https://danarjaybagabaycabucana.github.io/Portfolio/">Yes!</a>
                       </div>
                     </div>
                   </div>
@@ -538,8 +543,12 @@
                           <img src="assets/img/team/Channey.png" alt="Channey-Ydreo-Marzan-Portrait.png">
                         </div>
                         <div class="flip-card-back">
-                          <p>Dev</p>
-                          <hr>
+                          <p>Developer</p>
+                          <hr/>
+                          <p style="font-size: x-large;padding-bottom: 90px;">Hi! My name is Channey Ydreo Marzan,<br/></p>
+                          <hr/>
+                          <p style="font-size: 20px;">Social Media Accounts:</p>
+                          <a class="btn btn-primary" href="#">View Portfolio</a>
                           <a class="btn btn-primary" style="background-color: #3b5998;" href="https://www.facebook.com/channeyydreo.marzan/">
                             <i class="bi bi-facebook"></i>
                             </a>
@@ -552,9 +561,6 @@
                             <a class="btn btn-primary" style="background-color: #333;" href="#">
                               <i class="bi bi-github"></i>
                             </a>
-                            <br>
-                            <p>Do you wanna build Snowman?</p>
-                            <a class="btn btn-primary" href="#">Yes!</a>
                         </div>
                       </div>
                 </div>
