--- a/index.html
+++ b/index.html
@@ -414,7 +414,7 @@
                 <a class="btn btn-primary" style="background-color: #ac2bac;" href="https://instagram.com/emsshhiiee?igshid=OGQ5ZDc2ODk2ZA==">
                   <i class="bi bi-instagram"></i>
                 </a>
-                <a class="btn btn-primary" style="background-color: #333;" href="#">
+                <a class="btn btn-primary" style="background-color: #333;" href="https://github.com/emshiie">
                   <i class="bi bi-github"></i>
                 </a>
               </div>
