--- a/index.html
+++ b/index.html
@@ -472,7 +472,7 @@
                       <a class="btn btn-primary" style="background-color: #ac2bac;" href="https://www.instagram.com/jooowwy/">
                         <i class="bi bi-instagram"></i>
                       </a>
-                      <a class="btn btn-primary" style="background-color: #333;" href="#">
+                      <a class="btn btn-primary" style="background-color: #333;" href="https://github.com/ekenemes">
                         <i class="bi bi-github"></i>
                       </a>
                   </div>
@@ -549,7 +549,7 @@
                           <p style="font-size: x-large;padding-bottom: 90px;">Hi! My name is Channey Ydreo Marzan,<br/></p>
                           <hr/>
                           <p style="font-size: 20px;">Social Media Accounts:</p>
-                          <a class="btn btn-primary" href="#">View Portfolio</a>
+                          <a class="btn btn-primary" href="https://channeyydreo.github.io/Portfolio/">View Portfolio</a>
                           <a class="btn btn-primary" style="background-color: #3b5998;" href="https://www.facebook.com/channeyydreo.marzan/">
                             <i class="bi bi-facebook"></i>
                             </a>
@@ -559,7 +559,7 @@
                             <a class="btn btn-primary" style="background-color: #ac2bac;" href="https://www.instagram.com/ydriex/">
                               <i class="bi bi-instagram"></i>
                             </a>
-                            <a class="btn btn-primary" style="background-color: #333;" href="#">
+                            <a class="btn btn-primary" style="background-color: #333;" href="https://github.com/ChanneyYdreo/">
                               <i class="bi bi-github"></i>
                             </a>
                         </div>
