--- a/index.html
+++ b/index.html
@@ -39,7 +39,6 @@
     <link href="assets/css/index.css" rel="stylesheet" />
     <link href="assets/css/card.css" rel="stylesheet" />
     <link href="assets/css/style.css" rel="stylesheet" />
-    <link href="assets/css/custom.css" rel="stylesheet" />
     <link href="assets/css/team.css" rel="stylesheet" />
 
     <!-- Animation -->
@@ -58,7 +57,7 @@
       src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"
       type="text/javascript"
     ></script>
-    <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+    
     <script>
       $(document).ready(function () {
         // Function to check scroll position and toggle flip class
@@ -103,8 +102,8 @@
       }
 
       function flipCard(element) {
-        element.classList.add("animate__flip"); // Add a flip effect
-      }
+    element.classList.toggle("flip");
+    }
     </script>
 
     <script>
@@ -166,29 +165,28 @@
             <h2>About Us</h2>
           </div>
           <div class="row content">
-            <div class="col-lg-12" data-about="abtOurStory">
+            <div class="col-lg-12 flip-section" data-about="abtOurStory">
               <div class="flipper">
                 <h1>Our Story</h1>
                 <p>
-                  In the vibrant tapestry of Nueva Ecija University of Science
-                  and Technology's College of Information and Communications
-                  Technology (CICT), we are not just individuals; we are a
-                  collective force of IT students bound by a shared passion for
-                  technology, innovation, and a commitment to excellence. As we
-                  unveil our Techcard, we invite you to explore the unique
-                  identity that defines us.
+                  In the vibrant tapestry of Nueva Ecija University of Science and
+                  Technology's College of Information and Communications Technology
+                  (CICT), we are not just individuals; we are a collective force of IT
+                  students bound by a shared passion for technology, innovation, and a
+                  commitment to excellence. As we unveil our Techcard, we invite you to
+                  explore the unique identity that defines us.
                 </p>
               </div>
             </div>
-            <div class="col-lg-12 pt-4 pt-lg-12" data-about="abtOurStory">
+            <div class="col-lg-12 pt-4 pt-lg-12 flip-section" data-about="abtGame">
               <div class="flipper">
                 <h1>About Game</h1>
                 <p>
-                  All of the cards are laid face down on the screen and two
-                  cards are flipped face up over each turn. The player has to
-                  turn over pairs of matching cards. Click on the cards to flip
-                  them and try to remember the position of each card then you
-                  should match each two pairs by memory.
+                  All of the cards are laid face down on the screen and two cards are
+                  flipped face up over each turn. The player has to turn over pairs of
+                  matching cards. Click on the cards to flip them and try to remember
+                  the position of each card then you should match each two pairs by
+                  memory.
                 </p>
               </div>
             </div>
