--- a/index.html
+++ b/index.html
@@ -198,8 +198,7 @@
       <!-- ======= Our Values Section ======= -->
       <section id="our-values" class="our-values">
         <div class="container">
-          <div class="row">
-            <div class="col-md-6 d-flex align-items-stretch">
+          <div class="row"> 
               <div
                 class="card animated-card animate__animated"
                 style="background-image: url('./assets/img/values/om.jpg')"
@@ -211,7 +210,7 @@
                       href="#values"
                       class="animated-link"
                       onclick="animateText(this)"
-                      >Our Mission <i class="fas fa-chevron-right"></i
+                      >Our Mission</i
                     ></a>
                   </h3>
                   <p class="card-text" onmouseover="animateText(this)">
@@ -224,7 +223,6 @@
                 </div>
               </div>
             </div>
-            <div class="col-md-6 d-flex align-items-stretch mt-4 mt-md-0">
               <div
                 class="card animated-card animate__animated"
                 style="background-image: url('./assets/img/values/op.jpg')"
@@ -236,7 +234,7 @@
                       href="#values"
                       class="animated-link"
                       onclick="animateText(this)"
-                      >Our Plan <i class="fas fa-chevron-right"></i
+                      >Our Plan</i
                     ></a>
                   </h3>
                   <p class="card-text" onmouseover="animateText(this)">
